Separation of concerns for job view/model/controller
Jobs are separated from their visual representation.
Streams (text and JSON) are used as separation.
Streams leverage EventEmitters.
The stream and job code is inspired by Node.js API's.

--- a/static/js/libs/README
+++ b/static/js/libs/README
@@ -60,3 +60,18 @@ JavaScript functional programming library.
 
 Local Modifications:
 -none-
+
+
+EventEmitter
+============
+
+URL: https://github.com/Wolfy87/EventEmitter/
+Version: 3.1.4
+License: MIT
+License File: README.md
+
+Description:
+Evented JavaScript for the browser.
+
+Local Modifications:
+-none-
